# qt-bezier-spline-visualizer

./: CMakeLists.txt  CurveCalculator.cpp  CurveCalculator.h  DrawingArea.cpp  DrawingArea.h  MainWindow.cpp  MainWindow.h  PointModel.cpp  PointModel.h  README.md  main.cpp
